--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "animate.css": "^4.1.1",
+    "element-plus": "^2.7.7",
     "flowbite": "^2.4.1",
     "vue": "^3.4.29",
     "vue-router": "^4.4.0"
@@ -18,6 +21,8 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.6",
+    "unplugin-auto-import": "^0.18.0",
+    "unplugin-vue-components": "^0.27.3",
     "vite": "^5.3.1"
   }
 }
