--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "animate.css": "^4.1.1",
+    "axios": "^1.7.2",
     "element-plus": "^2.7.7",
     "flowbite": "^2.4.1",
     "vue": "^3.4.29",
