--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@vueuse/integrations": "^10.11.0",
     "animate.css": "^4.1.1",
     "axios": "^1.7.2",
     "element-plus": "^2.3.9",
     "flowbite": "^2.4.1",
+    "universal-cookie": "^6.1.3",
     "vue": "^3.4.29",
     "vue-router": "^4.4.0"
   },
