--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "element-plus": "^2.3.9",
     "flowbite": "^2.4.1",
     "nprogress": "^0.2.0",
+    "pinia": "^2.1.7",
     "universal-cookie": "^6.1.3",
     "vue": "^3.4.29",
     "vue-router": "^4.4.0"
