--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "flowbite": "^2.4.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "universal-cookie": "^6.1.3",
     "vue": "^3.4.29",
     "vue-router": "^4.4.0"
