--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.2",
     "element-plus": "^2.3.9",
     "flowbite": "^2.4.1",
+    "md-editor-v3": "^4.17.4",
     "moment": "^2.30.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
